--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "wu-shu-project",
   "version": "1.0.0",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "latest",
     "core-js": "^3.4.0",
+    "cors": "^2.8.5",
     "excel4node": "^1.7.2",
     "exceljs": "^3.4.0",
     "express": "^4.17.1",
     "gmail-send": "^1.8.10",
+    "jsonwebtoken": "^8.5.1",
     "node-schedule": "^1.3.2",
     "tedious-connection-pool": "^1.0.5",
     "tedious-promises": "^0.4.1",
@@ -15,9 +18,13 @@
     "validator": "^11.1.0"
   },
   "devDependencies": {
-    "bcrypt": "^3.0.6",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2"
+  },
+  "scripts": {
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "12.7.0",
+    "npm": "6.13.0"
   }
 }
