--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "userName": "AlinaDror",
+  "userName": "alinadror",
   "password": "DrorAlina2331",
-  "server": "wushu2.database.windows.net",
+  "server": "wushu-server.database.windows.net",
   "options": {
     "database": "wushuDB",
     "encrypt": true
