--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "util": "^0.12.1",
     "validator": "^11.1.0"
   },
-  "devDependencies": {
-    "multer": "^1.4.2"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "node app.js"
   },
