--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "excel4node": "^1.7.2",
     "exceljs": "^3.4.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "gmail-send": "^1.8.10",
     "jsonwebtoken": "^8.5.1",
     "node-schedule": "^1.3.2",
