--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "wu-shu-project",
   "version": "1.0.0",
   "dependencies": {
+    "async": "^3.2.0",
+    "await": "^0.2.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "latest",
     "core-js": "^3.4.0",
@@ -11,6 +13,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "gmail-send": "^1.8.10",
+    "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "node-schedule": "^1.3.2",
     "tedious-connection-pool": "^1.0.5",
