--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formidable": "^1.2.1",
     "gmail-send": "^1.8.10",
     "googleapis": "^39.2.0",
+    "is-stream": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "node-schedule": "^1.3.2",
     "tedious-connection-pool": "^1.0.5",
