--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "is-stream": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "node-schedule": "^1.3.2",
+    "socket.io": "^2.3.0",
     "tedious-connection-pool": "^1.0.5",
     "tedious-promises": "^0.4.1",
     "util": "^0.12.1",
