--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "googleapis": "^39.2.0",
     "is-stream": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^7.1.2",
     "node-schedule": "^1.3.2",
+    "sinon": "^9.0.2",
     "socket.io": "^2.3.0",
     "tedious-connection-pool": "^1.0.5",
     "tedious-promises": "^0.4.1",
     "util": "^0.12.1",
     "validator": "^11.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nyc": "^15.0.1"
+  },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "engines": {
     "node": "12.7.0",
