--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-schedule": "^1.3.2",
     "sinon": "^9.0.2",
     "socket.io": "^2.3.0",
+    "supertest": "^4.0.2",
     "tedious-connection-pool": "^1.0.5",
     "tedious-promises": "^0.4.1",
     "util": "^0.12.1",
