--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.1.2",
     "node-schedule": "^1.3.2",
+    "path": "^0.12.7",
     "sinon": "^9.0.2",
     "socket.io": "^2.3.0",
     "supertest": "^4.0.2",
