--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chai": "^4.2.0",
     "core-js": "^3.4.0",
     "cors": "^2.8.5",
+    "dateformat": "^3.0.3",
     "excel4node": "^1.7.2",
     "exceljs": "^3.4.0",
     "express": "^4.17.1",
