--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "gmail-send": "^1.8.10",
-    "googleapis": "^39.2.0",
+    "googleapis": "^62.0.0",
     "is-stream": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.1.2",
+    "mysql": "^2.18.1",
+    "mysql-promisify": "^1.0.2",
     "node-schedule": "^1.3.2",
     "sinon": "^9.0.2",
     "socket.io": "^2.3.0",
     "supertest": "^4.0.2",
-    "tedious-connection-pool": "^1.0.5",
-    "tedious-promises": "^0.4.1",
     "util": "^0.12.1",
     "validator": "^11.1.0"
   },
   "devDependencies": {
+    "mysql-promise": "^5.0.0",
     "nyc": "^15.0.1"
   },
   "scripts": {
