--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "socket.io": "^2.3.0",
     "supertest": "^4.0.2",
     "util": "^0.12.1",
-    "validator": "^11.1.0"
-  },
-  "devDependencies": {
+    "validator": "^11.1.0",
     "mysql-promise": "^5.0.0",
     "nyc": "^15.0.1"
+  },
+  "devDependencies": {
+
   },
   "scripts": {
     "start": "node app.js",
